--- a/final/local.tex
+++ b/final/local.tex
@@ -11,6 +11,7 @@
 \newtheorem{lemma}{Lemma}
 \newtheorem{theorem}{Theorem}
 \newtheorem{corollary}{Corollary}
+\newcommand{\propname}{Proposition}
 \newcommand{\equationname}{Equation}
 \newcommand{\theoremname}{Theorem}
 \newcommand{\corollaryname}{Corollary}
