--- a/final/theory.tex
+++ b/final/theory.tex
@@ -111,18 +111,19 @@ Some choices of graph order and size lead to certain degenerate cases that serve
 the the proposed algorithm:
 \begin{itemize}
 \item The \emph{null} graph is the non-graph with no vertices \((n=m=0)\).
-\item The \emph{trivial} graph is the graph with exactly one vertex and no edges \((n=1,m=0)\).  Otherwise, a graph
-  is called \emph{non-trivial}.
-\item An \emph{empty} graph is a graph containing no edges (\(m=0\)).
+\item The \emph{trivial} graph is the graph with exactly one vertex and no edges \((n=1,m=0)\).  Otherwise
+  \((n>1)\), a graph is called \emph{non-trivial}.
+\item An \emph{empty} graph is a graph containing no edges \((m=0)\).
+\item A \emph{complete} graph is a graph containing every possible edge \(\left(m=\frac{n(n-1)}{2}\right)\).
 \end{itemize}
 
-Thus, both the null and trivial graphs are empty.
+Note that both the null and trivial graphs are empty.
 
 \subsection{Graph Relations}\label{sec:sub:relations}
 
 In addition to its vertices and edges, a graph may be associated with one or more relations.  Each relation has
 \(V(G)\) or \(E(G)\) as its domain and is used to associate vertices or edges with problem-specific attributes such
-as labels or colors.  Note that there are no particular limitations on the nature of such a relation --- everything
+as labels or colors.  Note that there are no particular limitations on the nature of such relations --- everything
 from a basic relation to a bijective function are possible.  Some authors include these relations and their
 codomains as part of the graph tuple; however, since these extra tuple elements don't affect the structure of a
 graph, we will not do so.
@@ -214,31 +215,48 @@ For example, the coloring shown in \figurename~\ref{fig:exproper} is surjective,
 \(C\):
 \[C=\set{\mtxtclr{green},\mtxtclr{blue},\mtxtclr{red},\mtxtclr{orange},\mtxtclr{brown}}\]
 Now, \(c\) is no longer surjective, and according to the definition, \(G\) is \colorable{5} --- the coloring \(c\)
-uses at most 5 colors (actually only 4), which is the cardinality of the codomain.
+uses at most 5 colors (actually only 4), which is the cardinality of the codomain.  This fact is generalized by
+\theoremname~\ref{thm:coloring}.
 
-Thus, we can make the statement in Proposition \ref{prop:coloring}.
-
-\begin{proposition}
-  \label{prop:coloring}
-  Let \(G\) be a graph.  If \(G\) is \colorable{k} then \(G\) is \colorable{(k+1)}
-\end{proposition}
-
-By inductive application of Proposition \ref{prop:coloring}, one can arrive at the conclusion in Proposition
-\ref{prop:coloring2}.
-
-\begin{proposition}
-  \label{prop:coloring2}
+\begin{theorem}
+  \label{thm:coloring}
   Let \(G\) be a graph and let \(r\in\N\).  If \(G\) is \colorable{k} then \(G\) is \colorable{(k+r)}.
-\end{proposition}
+\end{theorem}
+
+\begin{proof}
+  Although this conclusion is fairly intuitive, it is always best to construct a proper coloring function under the
+  given conditions so that the result is based on the definition.  So start by assuming that \(G\) is of order
+  \(n\) and is \colorable{k}.  This means that there exists a coloring function \(c:V(G)\to C\) that is proper with
+  \(\abs{C}=k\).  Let \(V(G)=\set{v_1,\ldots,v_n}\) and let \(C=\set{c_1,\cdots,c_k}\).  Now, let
+  \(C'=\set{c_1,\cdots,c_{k+r}}\) and define \(c':V(G)\to C'\) by:
+  \[c'(v)=c(v)\]
+  Assume that \(u\) and \(v\) are two nonadjacent vertices in \(G\): \(uv\notin E(G)\).  Since \(c\) is proper:
+  \[c'(u)=c(u)\ne c(v)=c'(v)\]
+  and so \(c'\) is proper with \(\abs{C'}=k+r\).
+
+  Therefore, \(G\) is \colorable{k+r}.
+\end{proof}
 
 Furthermore, for a graph \(G\) of order \(n\), if \(n\le k\) then we can conclude that \(G\) is \colorable{k},
-since there are sufficient colors to assign each vertex its own unique color.  This is stated in Proposition
-\ref{prop:coloring3}, which will turn out to be an important termination case for the proposed algorithm.
+since there are sufficient colors to assign each vertex its own unique color.  This result is stated in
+\theoremname~\ref{thm:nlek}, which will turn out to be an important termination case for the proposed algorithm.
 
-\begin{proposition}
-  \label{prop:coloring3}
+\begin{theorem}
+  \label{thm:nlek}
   Let \(G\) be a graph of order \(n\) and let \(k\in\N\).  If \(n\le k\) then \(G\) is \colorable{k}.
-\end{proposition}
+\end{theorem}
+
+\begin{proof}
+  Assume \(n\le k\).  Let \(V(G)=\set{v_1,\ldots,v_n}\) and let \(C=\set{c_1,\ldots,c_k}\).  Now, define
+  \(c:V(G)\to C\) by:
+  \[c(v_i)=c_i\]
+  which is possible since, by assumption, \(n\le k\).  Finally, assume that \(v_i\) and \(v_j\) are two nonadjacent
+  vertices in \(G\): \(v_iv_j\notin E(G)\).  Since the \(c_i\) are distinct:
+  \[c(v_i)=c_i\ne c_j=c(v_j)\]
+  and so \(c\) is proper with \(\abs{C}=k\).
+
+  Therefore, \(G\) is \colorable{k}.
+\end{proof}
 
 Since \(k\in\N\), by the well-ordering principle there exists some minimum \(k\) such that a graph \(G\) is
 \colorable{k}.  This minimum \(k\) is called the \emph{chromatic number} of \(G\), denoted by \(\X(G)\).  A
@@ -406,7 +424,7 @@ so that \(H\) is now an induced subgraph of \(G\).
 
     \(H=G[\set{a,b,e}]\)
   \end{minipage}
-  \caption{An induced subgraph.}
+  \caption{An induced subgraph example.}
   \label{fig:induced}
 \end{figure}
 
@@ -454,7 +472,7 @@ their incident edges \(ae\) and \(be\).
 
     \(G-\set{c,e}\)
   \end{minipage}
-  \caption{Vertex removal.}
+  \caption{A vertex removal example.}
   \label{fig:vremove}
 \end{figure}
 
@@ -505,7 +523,7 @@ same vertices as \(G\) and with edge set \(E(G)\cup\set{uv}\).  Note that \(G\) 
 
     \(G+cd\)
   \end{minipage}
-  \caption{Edge addition.}
+  \caption{An edge addition example.}
   \label{fig:eadd}
 \end{figure}
 
@@ -554,7 +572,7 @@ Thus, only edges are removed --- no vertices are removed.  If \(X\ne\emptyset\) 
 
     \(G-\set{ae,be}\)
   \end{minipage}
-  \caption{Edge removal.}
+  \caption{An Edge removal example.}
   \label{fig:eremove}
 \end{figure}
 
@@ -605,7 +623,7 @@ edges is discarded.  Edges \(bc\) and \(bd\) also become incident to the single 
 
     \(G\cdot ab\)
   \end{minipage}
-  \caption{Vertex contraction.}
+  \caption{A vertex contraction example.}
   \label{fig:contract}
 \end{figure}
 
@@ -613,23 +631,213 @@ For the operation \(G\cdot uv\), if \(uv\in E(G)\) then the operation is also re
   contraction}.  If \(uv\notin E(G)\) then the operation is also referred to as \emph{vertex identification}.  The
 proposed algorithm uses vertex identification to consolidate two non-adjacent FRs into the same part.
 
+\subsubsection{Graph Complement}\label{sec:sub:sub:complement}
+
+One final important graph mutator is the \emph{complement} of a graph.  For a graph \(G\), the \emph{complement} of
+\(G\), denoted by \(\bar{G}\), is the graph with the same vertex set as \(G\): \(V(G)=V(\bar{G})\), and with edge
+set \(E(\bar{G})=\ps_2\left(V(G)\right)-E(G)\); if \(u,v\in G\) are adjacent in \(G\) \(\left(uv\in E(G)\right)\)
+then they are not adjacent in \(\bar{G}\) \(\left(uv\notin E(\bar{G})\right)\).
+
+An example of a graph complement operation is shown in \figurename~\ref{fig:complement}.
+
+\begin{figure}[H]
+  \begin{minipage}{2.75in}
+    \centering
+    \begin{tikzpicture}[every node/.style={labeled node}]
+      \cycleVnodes{\(a\),\(b\),\(c\),\(d\)}{(0,0)}{0.75in}{135}{};
+      \draw (1) edge (2) edge (3) edge (4);
+      \draw [red, dashed] (2) edge (3);
+      \draw [red, dashed] (2) edge (4);
+      \draw [red, dashed] (3) edge (4);
+    \end{tikzpicture}
+
+    \(G\)
+  \end{minipage}
+  \begin{minipage}{2.75in}
+    \centering
+    \begin{tikzpicture}[every node/.style={labeled node}]
+      \cycleVnodes{\(a\),\(b\),\(c\),\(d\)}{(0,0)}{0.75in}{135}{};
+      \draw [red, dashed] (1) edge (2) edge (3) edge (4);
+      \draw (2) edge (3);
+      \draw (2) edge (4);
+      \draw (3) edge (4);
+    \end{tikzpicture}
+
+    \(\bar{G}\)
+  \end{minipage}
+  \caption{A graph complement example.}
+  \label{fig:complement}
+\end{figure}
+
+Some important properties of the complement of a graph are stated in \propname~\ref{prop:compprops}.
+
+\begin{proposition}
+  \label{prop:compprops}
+  Let \(G\) be a graph of order \(n\) and size \(m\):
+  \begin{enumerate}
+  \item \(\bar{\bar{G}}=G\)
+  \item \(G\) is empty if and only if \(\bar{G}\) is complete.
+  \item \(n(\bar{G})=n\)
+  \item \(m(\bar{G})=\frac{n(n-1)}{2}-m\)
+  \end{enumerate}
+\end{proposition}
+
+For example, in \figurename~\ref{fig:complement}, since \(n(G)=4\) and \(m(G)=3\), it is the case that
+\(n(\bar{G})=4\) and:
+\[m(\bar{G})=\frac{4(4-1)}{2}-3=6-3=3\]
+
 \subsection{Independent Sets}\label{sec:sub:independent}
 
 The primary purpose of a \coloring{k} of a graph \(G\) is to distribute the vertices of \(G\) into \(k\) so-called
 \emph{independent} (some possibly empty) sets.  For a graph \(G\), an \emph{independent} set \(S\subseteq V(G)\),
 sometimes called a \emph{stable} set, is a set of pairwise non-adjacent vertices in \(G\): for all \(u,v\in S\),
-\(uv\notin E(G)\).  By definition, the empty set is an independent set.  The cardinality of the largest possible
-independent set for a graph \(G\), denoted by \(\a(G)\), is called the \emph{independence number} for \(G\).
+\(uv\notin E(G)\).  By definition, the empty set is an independent set of every graph \(G\).  A \emph{maximal}
+independent set of a graph \(G\), sometimes referred to as a MIS of \(G\), is an independent set of \(G\) that
+cannot be extended by an additional vertex in \(V(G)\); MISs of \(G\) are never proper subsets of other independent
+sets in \(G\).  The cardinality of the largest possible MIS in a graph \(G\), denoted by \(\a(G)\), is called the
+\emph{independence number} for \(G\).
+
+Consider the example in \figurename~\ref{fig:independent}.  Although the graph contains independent sets of sizes
+\(1\) and \(2\), none of these are maximal.  All of the maximal independent sets are of sizes \(3\) and \(4\), and
+so \(\a(G)=4\).
+
+\begin{figure}[H]
+  \begin{minipage}{3.25in}
+    \centering
+    \begin{tikzpicture}[every node/.style={labeled node}]
+      \node (a) at (0,0) {\(a\)};
+      \node (b) at (2,0) {\(b\)};
+      \node (c) at (4,0) {\(c\)};
+      \node (d) at (6,0) {\(d\)};
+      \node (e) at (5,-2) {\(e\)};
+      \node (f) at (3,-2) {\(f\)};
+      \node (g) at (1,-2) {\(g\)};
+      \node (h) at (3,2) {\(h\)};
+      \draw (a) edge (f) edge (g) edge (h);
+      \draw (b) edge (f) edge (h);
+      \draw (c) edge (e) edge (f) edge (h);
+      \draw (d) edge (e) edge (f) edge (h);
+    \end{tikzpicture}
+  \end{minipage}
+  \begin{minipage}{2in}
+    \centering
+    \begin{tabular}{c|c}
+      MIS & SIZE \\
+      \hline
+      \(\set{a, b, c, d}\) & \(4\) \\
+      \(\set{a, b, e}\) & \(3\) \\
+      \(\set{b, c, d, g}\) & \(4\) \\
+      \(\set{b, e, g}\) & \(3\) \\
+      \(\set{e, f, g, h}\) & \(4\)
+    \end{tabular}
+
+    \bigskip
+
+    \(\a(G)=4\)
+  \end{minipage}
+  \caption{The independent sets of an example graph.}
+  \label{fig:independent}
+\end{figure}
 
 Since a \chromatic{k} coloring of a graph \(G\) is surjective, there are no unused colors (empty sets) and so the
 coloring partitions the vertices of \(G\) into exactly \(k\) non-empty independent sets.  The goal of the proposed
 algorithm is to find a chromatic coloring of a design graph so that the resulting independent sets indicate how to
 consolidate the FRs into a minimum number of parts: one part per independent set.
 
-A well-known algorithm for determining the chromatic number of a graph, introduced by Christofides
-(1971)~\cite{christofides}, is based on finding the largest possible independent set \(S\) for a graph and then
-continually repeating the process on \(G-S\) until \(S=\emptyset\).  The resulting partition represents a chromatic
-coloring of \(G\).  Part of this research compares the Christofides algorithm to the proposed algorithm.
+\subsection{Cliques}\label{sec:sub:cliques}
+
+A \emph{clique} is a complete subgraph of a graph.  A clique of order \(k\) in a graph \(G\) is called a \clique{k}
+of \(G\).  A \emph{maximal} clique in a graph \(G\) is a clique in \(G\) that cannot be extended by an additional
+vertex in \(V(G)\); maximal cliques in \(G\) are never proper subgraphs of other cliques in \(G\).  The order of
+the largest possible maximal clique in a graph \(G\), denoted by \(\w(G)\), is called the \emph{clique number} for
+\(G\).
+
+Consider the example in \figurename~\ref{fig:clique}.  Although the graph contains cliques of orders \(1\) and
+\(2\), none of these are maximal.  All of the maximal cliques are of orders \(3\) and \(4\), and so \(\w(G)=4\).
+
+\begin{figure}[H]
+  \begin{minipage}{3.25in}
+    \centering
+    \scalebox{0.75}{
+      \begin{tikzpicture}[every node/.style=labeled node]
+        \completeV{\(a\),\(b\),\(c\),\(d\)}{(0,0)}{0.75in}{135}{a};
+        \completeV{\(e\),\(f\),\(g\)}{(5,0)}{0.6in}{120}{b};
+        \node (h) [right=of b2] {\(h\)};
+        \draw (a2) edge (b1);
+        \draw (a3) edge (b3);
+        \draw (b2) edge (h);
+        \draw (a1) -- ($(a1)+(0,1cm)$) -| (b1);
+        \draw (a4) -- ($(a4)-(0,1cm)$) -| (b3);
+        \draw (a2) -- (b3);
+        \draw (b1) -| (h);
+        \draw (b3) -| (h);
+      \end{tikzpicture}
+    }
+
+    \(G\)
+  \end{minipage}
+  \begin{minipage}{2.5in}
+    \centering
+    \begin{tabular}{c|c}
+      MAXIMAL CLIQUE & ORDER \\
+      \hline
+      \(G[\set{a, b, c, d}]\) & \(4\) \\
+      \(G[\set{a, b, e}]\) & \(3\) \\
+      \(G[\set{b, c, d, g}]\) & \(4\) \\
+      \(G[\set{b, e, g}]\) & \(3\) \\
+      \(G[\set{e, f, g, h}]\) & \(4\)
+    \end{tabular}
+
+    \bigskip
+
+    \(\w(G)=4\)
+  \end{minipage}
+  \caption{The maximal cliques of an example graph.}
+  \label{fig:clique}
+\end{figure}
+
+Since it is true that two nonadjacent vertices in a graph must be adjacent in the graph's complement, there is an
+important relationship between the independent sets of a graph and the cliques in the graph's complement.  This
+relationship is stated in \theoremname~\ref{thm:isclique}.
+
+\begin{theorem}
+  \label{thm:isclique}
+  Let \(G\) be a graph and let \(S\subseteq V(G)\).  \(S\) is an independent set in \(G\) if and only if
+  \(\bar{G}[S]\) is a clique in \(\bar{G}\).  Furthermore, \(S\) is maximal in \(G\) if and only if \(\bar{G}[S]\)
+  is maximal in \(\bar{G}\) and so \(\a(G)=\w(\bar{G})\).
+\end{theorem}
+
+\begin{proof}
+  By definition, for all \(u,v\in V(G)\), \(u\) is not adjacent to \(v\) in \(G\) if and only if \(u\) and \(v\)
+  are adjacent in \(\bar{G}\), and so \(G[S]\) is empty if and only if \(\bar{G}[S]\) is complete.  Therefore,
+  \(S\) is an independent set in \(G\) if and only if \(\bar{G}[S]\) is a clique in \(\bar{G}\).
+
+  Furthermore, assume that \(S\) is maximal in \(G\) but assume by way of contradiction that \(\bar{G}[S]\) is
+  not maximal.  Then there exists \(v\in V(\bar{G})\) such that \(v\notin S\) and \(\bar{G}[S\cup\set{v}]\) is a
+  clique in \(\bar{G}\), and thus \(S\cup\set{v}\) is an independent set in \(G\).  But \(S\subset S\cup\set{v}\),
+  violating the maximality of \(S\).  Therefore \(\bar{G}[S]\) is maximal in \(\bar{G}\).
+
+  Similarly, assume that \(\bar{G}[S]\) is maximal in \(\bar{G}\) but assume by way of contradiction that \(S\) is
+  not maximal in \(G\).  Then there exists \(v\in V(G)\) such that \(v\notin S\) and \(S\cup\set{v}\) is an
+  independent set in \(G\), and thus \(\bar{G}[S\cup\set{v}]\) is a clique in \(\bar{G}\).  But
+  \(\bar{G}[S]\subset\bar{G}[S\cup\set{v}]\), violating the maximality of \(\bar{G}[S]\).  Therefore \(S\) is
+  maximal in \(G\).
+\end{proof}
+
+Indeed, the graphs in \figurename~\ref{fig:independent} and \figurename~\ref{fig:clique} are complements and,
+as expected, every MIS in \figurename~\ref{fig:independent} is a maximal clique in \figurename~\ref{fig:clique}.
+
+Since a \clique{k} of a graph \(G\) needs at least \(k\) colors in any proper coloring of \(G\), the clique number
+of \(G\) provides a nice lower bound for the chromatic number of \(G\).  Unfortunately, the clique number problem
+is known to be NP-hard as well~\cite{corneil}.  Thus, there are many attempts in the literature to find a good
+lower bound for the clique number of a graph \(G\), usually denoted by \(\w'(G)\).  If such a lower bound is known
+then the conclusion of \propname~\ref{prop:clique} holds:
+
+\begin{proposition}
+  \label{prop:clique}
+  Let \(G\) be a graph with clique number lower bound \(\w'(G)\):
+  \[\w'(G)\le\w(G)\le\X(G)\]
+\end{proposition}
 
 \subsection{Connected Graphs}\label{sec:sub:connected}
 
@@ -935,7 +1143,7 @@ When considering the degrees of all the vertices in a graph, the following limit
   \dmax(G)=\max_{v\in V(G)}\deg(v)
 \end{gather*}
 
-Therefore, we can state the conclusion of Proposition~\ref{prop:degree}:
+Therefore, we can state the conclusion of \propname~\ref{prop:degree}:
 
 \begin{proposition}
   \label{prop:degree}
@@ -1248,48 +1456,3 @@ When such a tree is applied to the problem of exhaustively finding the chromatic
 of vertex contraction and edge addition choices, the tree is called a \emph{Zykov} tree and the algorithm is called
 a \emph{Zykov} algorithm~\cite{mcdiarmid}.  Zykov algorithms are described in detail in the following sections.  In
 fact, the proposed algorithm is a variation of a standard Zykov algorithm.
-
-\subsection{Cliques}\label{sec:sub:cliques}
-
-A \emph{clique} is a complete subgraph of a graph.  A \emph{maximal} clique is a clique that cannot be extended by
-an additional vertex.  The \emph{maximum} clique is the maximal clique of highest order.  The \emph{clique number}
-of a graph \(G\), denoted by \(\w(G)\), is the order of the maximum clique in \(G\).  Consider the example in
-\figurename~\ref{fig:clique}.  \(G\) has many \clique{2}s; however, none of them are maximal.  \(G\) has several
-maximal \clique{3}s --- for example: \(G[\set{b,e,g}]\).  There is only one maximal \clique{4}:
-\(G[\set{a,b,c,d}]\) and no clique of higher order.  Thus, \(\w(G)=4\).
-
-\begin{figure}[H]
-  \centering
-  \begin{tikzpicture}[every node/.style=labeled node]
-    \completeV{\(a\),\(b\),\(c\),\(d\)}{(0,0)}{0.75in}{135}{a};
-    \completeV{\(e\),\(f\),\(g\)}{(5,0)}{0.6in}{120}{b};
-    \node (h) [right=of b2] {\(h\)};
-    \draw (a2) edge (b1);
-    \draw (a3) edge (b3);
-    \draw (b2) edge (h);
-    \draw (a1) -- ($(a1)+(0,1cm)$) -| (b1);
-    \draw (a4) -- ($(a4)-(0,1cm)$) -| (b3);
-    \draw (a2) -- (b3);
-    \draw (b1) -| (h);
-    \draw (b3) -| (h);
-  \end{tikzpicture}
-
-  \(G\)
-  \caption{A graph with cliques.}
-  \label{fig:clique}
-\end{figure}
-
-Since a \clique{k} of a graph \(G\) needs at least \(k\) colors in any proper coloring of \(G\), the clique number
-of \(G\) provides a nice lower bound for the chromatic number of \(G\).  Unfortunately, the clique number problem
-is known to be NP-hard as well~\cite{corneil}.  Thus, there are many attempts in the literature to find a good
-lower bound for the clique number of a graph \(G\), usually denoted by \(\w'(G)\).  If such a lower bound is known
-then the conclusion of Proposition~\ref{prop:clique} holds:
-
-\begin{proposition}
-  \label{prop:clique}
-  Let \(G\) be a graph with clique number lower bound \(\w'(G)\):
-  \[\w'(G)\le\w(G)\le\X(G)\]
-\end{proposition}
-
-Examples of such algorithms are discussed in detail in later sections, since they are typically used to ``bound''
-Zykov branch-and-bound algorithms.
